welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:7: error: type mismatch;
 found   : Unit
 required: Boolean
  if (c==10){
  ^